--- a/Index.html
+++ b/Index.html
@@ -280,7 +280,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
     <div class="row">
       <div class="col-sm-3 col-xs-6">
         <a href="http://crus-et-prestige.com/" target="_blank">
-          <img width:"180" src="images/brands/crus-et-prestige.png" alt="Crus et Prestige">
+          <img width:"180" src="images/brands/cetp.png" alt="Crus et Prestige">
         </a>
       </div>
       <div class="col-sm-3 col-xs-6">
@@ -302,7 +302,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
     <div class="row">
       <div class="col-sm-3 col-xs-6">
         <a href="http://www.lazzaronisaronno.com/" target="_blank">
-          <img width:"180" src="images/brands/lazzaroni.php.jpeg" alt="Lazzaroni">
+          <img width:"180" src="images/brands/lazzaroni.jpg" alt="Lazzaroni">
         </a>
       </div>
       <div class="col-sm-3 col-xs-6">
