--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 <!-- Giovanni-->
           <div class="col-md-3">
             
-              <img src="images/contacts/gio.jpg" class="round">
+              <img src="images/contacts/giovanni.jpg" class="round">
                 <p class="bold"> Giovanni Cardullo</p> 
                 <div class="contact1">
                  <p><span class="glyphicon glyphicon-star" aria-hidden="true"></span> President</p> 
@@ -132,7 +132,7 @@
 <!-- Colleen-->
           <div class="col-md-3">
             <div class="contact">
-              <img src="images/contacts/colleen.jpg" class="round">
+              <img src="images/contacts/colleen2.jpg" class="round">
               <p class="bold">Colleen N. Clayton</p>
               <p>Area Manager for South America
               <p><a href="mailto:colleen@giowine.com?cc=info@giowine.com.com&subject=More%20information%20about%20Giowine&body=Dear Colleen, %0A%0AI came across your website and I'm interested in more information about Giowine, Inc."><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> colleen@giowine.com</a></p>
@@ -154,7 +154,7 @@
 <!-- Hermann-->
           <div class="col-md-3">
             <div class="contact">
-              <img src="images/contacts/hermann.jpg" class="round">
+              <img src="images/contacts/hermann2.jpg" class="round">
               <p class="bold">Hermann Bendfeldt</p>
               <p>Area Manager for Central America, Colombia and Peru</p>
               <p><a href="mailto:hermann@giowine.com?cc=info@giowine.com.com&subject=More%20information%20about%20Giowine&body=Dear Hermann, %0A%0AI came across your website and I'm interested in more information about Giowine, Inc."><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> hermann@giowine.com</a></p>
