--- a/wine.html
+++ b/wine.html
@@ -664,7 +664,8 @@ var marker = L.AwesomeMarkers.icon({
         <h4 class="modal-title" id="myModalLabel">LAZZARONI</h4>
       </div>
       <div class="modal-body">
-        <p class="caption">| Region: Lombardia</p>
+        <img src="images/winery/lazzaroni.jpg" alt="Amaretto Lazzaroni">
+        <p class="caption">CAPTION| Region: Lombardia</p>
         <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -766,7 +767,7 @@ var marker = L.AwesomeMarkers.icon({
       </div>
       <div class="modal-body">
         <iframe width="100%" height="375" src="https://www.youtube.com/embed/fYmXH4mEk40" frameborder="0" allowfullscreen></iframe>
-        <p class="caption">A video made during Rustichella's 2014 Primograno tour. Chefs from around the world were invited and taught how to craft their renowned artisinal pasta</p>
+        <p class="caption">A video made during Rustichella's 2014 Primograno tour. Chefs from around the world were invited and taught how to craft their renowned artisinal pasta | Region: Abruzzo</p>
         <blockquote><p>Gianluigi and Stefania Peduzzi proudly continue their grandfather's Abruzzan tradition using only top quality durum wheat semolina, bronze dies, and pure mountain water to achieve that perfect texture and taste that made Rustichella d'Abruzzo the most recognized premium pasta, used by top chefs and available in all delicatessen shops of the world.</p></blockquote>
       </div>
       <div class="modal-footer">
@@ -791,7 +792,7 @@ var marker = L.AwesomeMarkers.icon({
       </div>
       <div class="modal-body">
         <img src="images/winery/ferrarelle_2.png" alt="Ferrarelle Bottle Picture">
-         <p class="caption">The best way to enjoy a glass of Ferrarelle is with real Italian pizza</p>
+         <p class="caption">The best way to enjoy a glass of Ferrarelle is with real Italian pizza | Region: </p>
         <blockquote><p>Ferrarelle is Italy's n°1 sparkling water bottled directly at the source since 1893. It springs from an ancient volcanic source, the extinct Roccamonfina volcano. Its natural effervescence, unique sensory profile, and elegant taste make Ferrarelle the perfect complement to the flavors of outstanding cuisine.</p></blockquote>
       </div>
       <div class="modal-footer">
@@ -813,7 +814,8 @@ var marker = L.AwesomeMarkers.icon({
         <h4 class="modal-title" id="myModalLabel">AMARETTI DEL CHIOSTRO</h4>
       </div>
       <div class="modal-body">
-        <p class="caption"></p>
+        <img src="images/winery/chiostro.jpg" alt="Amaretti di Saronno">
+        <p class="caption">CAPTION \ REGION </p>
         <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -842,7 +844,7 @@ var marker = L.AwesomeMarkers.icon({
       </div>
       <div class="modal-body">
         <img src="images/winery/planeta_oil_3.jpg" alt="Planeta Olives">
-         <p class="caption">Hand-picked olives at Planeta's Caparrina oil mill</p>
+         <p class="caption">Hand-picked olives at Planeta's Caparrina oil mill | Region: Sicilia</p>
         <blockquote><p>The Planeta olive grove extends for 98 hectares in the Capparrina district, a natural oasis of great beauty sloping towards the sea. Planeta’s decision to dedicate this land to olives was not random: it was both an ethical and aesthetic choice in order to safeguard the landscape and its nature, to make the most of the land and to create employment.</p></blockquote>
       </div>
       <div class="modal-footer">
@@ -866,7 +868,7 @@ var marker = L.AwesomeMarkers.icon({
       </div>
       <div class="modal-body">
         <img src="images/winery/roncaia.jpg" alt="La Roncaia Winery">
-         <p class="caption">La Roncaia's facilities | Region: Friuli Venezia Giulia</p>
+         <p class="caption">La Roncaia's facilities | Region: Friuli</p>
         <blockquote><p>This is a place for contemplation and experience accumulated during the slow passage of the seasons, where each day-to-day act takes on the sacredness of a ritual. Close to the exclusive vineyards in Cergneu di Nimis stands La Roncaia cellar, where life proceeds in complete harmony with the surroundings.</p></blockquote>
       </div>
       <div class="modal-footer">
