added hover effect
Signed-off-by: CASSY Mickaël <mickael.cassy@gmail.com>

--- a/wine.html
+++ b/wine.html
@@ -101,24 +101,24 @@
           </div>
         </div>
         <br>
-        <div id="food_and_wine" class="row font">
+        <div id="the_wines" class="row font">
           <div class="col-md-5">
               <p class="bold" data-name="planeta" >Planeta</p>
               <p class="bold" data-name="batasiolo" >Batasiolo</p>
-              <p class="bold" data-name="Mazzei" >Mazzei</p>
-              <p class="bold" data-name="Lazzaroni" >Lazzaroni</p>
-              <p class="bold" data-name="Riunite" >Riunite</p>
-              <p class="bold" data-name="Fantinel" >Fantinel</p>
-              <p class="bold" data-name="Vesevo" >Vesevo</p>
+              <p class="bold" data-name="mazzei" >Mazzei</p>
+              <p class="bold" data-name="lazzaroni" >Lazzaroni</p>
+              <p class="bold" data-name="riunite" >Riunite</p>
+              <p class="bold" data-name="fantinel" >Fantinel</p>
+              <p class="bold" data-name="vesevo" >Vesevo</p>
            </div>
            <div class="col-md-7">
-              <p class="bold" data-name="Maschio" >Maschio</p>
-              <p class="bold" data-name="Masi" >Masi</p>
-              <p class="bold" data-name="Farnese" >Farnese</p>
-              <p class="bold" data-name="Cecchi" >Cecchi</p>
-              <p class="bold" data-name="Casanova di Neri" >Casanova di Neri</p>
-              <p class="bold" data-name="Casale del Giglio" >Casale del Giglio</p>
-              <p class="bold" data-name="La Roncaia" >La Roncaia</p>
+              <p class="bold" data-name="maschio" >Maschio</p>
+              <p class="bold" data-name="masi" >Masi</p>
+              <p class="bold" data-name="farnese" >Farnese</p>
+              <p class="bold" data-name="cecchi" >Cecchi</p>
+              <p class="bold" data-name="casanova" >Casanova di Neri</p>
+              <p class="bold" data-name="casale" >Casale del Giglio</p>
+              <p class="bold" data-name="roncaia" >La Roncaia</p>
            </div>
          </div><!--/endrow-->
 
@@ -131,14 +131,12 @@
         <hr>
         <p>Because a number of these wine suppliers make other kinds of products, in XXXX, we also began to promote certain foods. Today, we even represent products that are not affiliated with our wine suppliers.</p>
         <br>
-        <div class="row font">
-
-        <p>Amaretti del Chiostro </p>
-         <p>Planeta Olive Oil</p>
-         <p>Rustichella Pasta Artigianale</p>
-         <p>Ferrarelle Mineral Water</p>
-
-         </div><!--/endrow-->
+        <div id="the_foods" class="row font">
+          <p data-name="amaretti" >Amaretti del Chiostro</p>
+          <p data-name="planeta" >Planeta Olive Oil</p>
+          <p data-name="rustichella" >Rustichella Pasta Artigianale</p>
+          <p data-name="ferrarelle" >Ferrarelle Mineral Water</p>
+       </div><!--/endrow-->
 
         </div>
 
@@ -167,26 +165,25 @@
           maxZoom: 16
         }).addTo(map);
 
-
         var markers_data = {
-          planeta:      {name: 'planeta',     coord:[37.8816289,15.1218875],  modal:'#myModal',   icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          batasiolo:    {name: 'batasiolo',   coord:[44.6376169,7.9421806],   modal:'#myModal2',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          maschio:      {name: 'maschio',     coord:[44.773463,10.513811],    modal:'#myModal3',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          mazzei:       {name: 'mazzei',      coord:[43.435532,11.306296],    modal:'#myModal4',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          farnese:      {name: 'farnese',     coord:[42.352734,14.201073],    modal:'#myModal5',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          fantinel:     {name: 'fantinel',    coord:[46.106565,12.836795],    modal:'#myModal6',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          riunite:      {name: 'riunite',     coord:[45.214193,11.284391],    modal:'#myModal7',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          casanova:     {name: 'casanova',    coord:[43.057149,11.5219],      modal:'#myModal8',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          masi:         {name: 'masi',        coord:[45.523359,10.863783],    modal:'#myModal9',  icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          lazzaroni:    {name: 'lazzaroni',   coord:[45.4015845,9.059264],    modal:'#myModal10', icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          casale:       {name: 'casale',      coord:[41.880312,12.486956],    modal:'#myModal11', icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          cecchi:       {name: 'cecchi',      coord:[43.863751,10.248668],    modal:'#myModal12', icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          vesevo:       {name: 'vesevo',      coord:[40.861278,14.737792],    modal:'#myModal13', icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          roncaia:      {name: 'roncaia',     coord:[46.210658,13.303138],    modal:'#myModal14', icon:{type:'glyphicon-glass',   color:'darkpurple', marker:null}},
-          rustichella:  {name: 'rustichella', coord:[42.396833,13.56532],     modal:'#myModal15', icon:{type:'glyphicon-cutlery', color:'green',      marker:null}},
-          ferrarelle:   {name: 'ferrarelle',  coord:[41.26142,14.1498185],    modal:'#myModal16', icon:{type:'glyphicon-cutlery', color:'green',      marker:null}},
-          amaretti:     {name: 'amaretti',    coord:[45.6867005,8.9315245],   modal:'#myModal17', icon:{type:'glyphicon-cutlery', color:'green',      marker:null}},
-          olio:         {name: 'olio',        coord:[37.6042748,12.9660447],  modal:'#myModal18', icon:{type:'glyphicon-cutlery', color:'green',      marker:null}}
+          planeta:      {name: 'planeta',     coord:[37.8816289,15.1218875],  modal:'#myModal',   icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          batasiolo:    {name: 'batasiolo',   coord:[44.6376169,7.9421806],   modal:'#myModal2',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          maschio:      {name: 'maschio',     coord:[44.773463,10.513811],    modal:'#myModal3',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          mazzei:       {name: 'mazzei',      coord:[43.435532,11.306296],    modal:'#myModal4',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          farnese:      {name: 'farnese',     coord:[42.352734,14.201073],    modal:'#myModal5',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          fantinel:     {name: 'fantinel',    coord:[46.106565,12.836795],    modal:'#myModal6',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          riunite:      {name: 'riunite',     coord:[45.214193,11.284391],    modal:'#myModal7',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          casanova:     {name: 'casanova',    coord:[43.057149,11.5219],      modal:'#myModal8',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          masi:         {name: 'masi',        coord:[45.523359,10.863783],    modal:'#myModal9',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          lazzaroni:    {name: 'lazzaroni',   coord:[45.4015845,9.059264],    modal:'#myModal10', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          casale:       {name: 'casale',      coord:[41.880312,12.486956],    modal:'#myModal11', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          cecchi:       {name: 'cecchi',      coord:[43.863751,10.248668],    modal:'#myModal12', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          vesevo:       {name: 'vesevo',      coord:[40.861278,14.737792],    modal:'#myModal13', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          roncaia:      {name: 'roncaia',     coord:[46.210658,13.303138],    modal:'#myModal14', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          rustichella:  {name: 'rustichella', coord:[42.396833,13.56532],     modal:'#myModal15', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          ferrarelle:   {name: 'ferrarelle',  coord:[41.26142,14.1498185],    modal:'#myModal16', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          amaretti:     {name: 'amaretti',    coord:[45.6867005,8.9315245],   modal:'#myModal17', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          olio:         {name: 'olio',        coord:[37.6042748,12.9660447],  modal:'#myModal18', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null}
         };
 
         _.map(markers_data, function(data, key){
@@ -205,6 +202,37 @@
               $(data.modal).modal('toggle');
           });
           data.marker = marker;
+        });
+
+        var overShow = function(name) {
+          _.map(markers_data, function(data, k){
+            if (name != k)
+              data.marker.setOpacity(0.2);
+            else
+              data.marker.setOpacity(1);
+          });
+        };
+        var allTheSame = function() {
+          _.map(markers_data, function(data, k){
+              data.marker.setOpacity(1);
+          });
+        };
+
+        $('#the_foods p[data-name]').each(function(index, element) {
+          var key = $(element).attr('data-name');
+          var marker = markers_data[key].marker;
+          $(element).on('mouseleave', allTheSame);
+          $(element).on('mouseover', function(e) {
+             overShow(key);
+          });
+        });
+        $('#the_wines p[data-name]').each(function(index, element) {
+          var key = $(element).attr('data-name');
+          var marker = markers_data[key].marker;
+          $(element).on('mouseleave', allTheSame);
+          $(element).on('mouseover', function(e) {
+             overShow(key);
+          });
         });
       </script>
     </div><!-- /MAP-->
