one picture is enough
Signed-off-by: CASSY Mickaël <mickael.cassy@gmail.com>

--- a/wine.html
+++ b/wine.html
@@ -78,9 +78,9 @@
 
 
 <!-- /TRYING -->
-<div class="bg" data-zero="background" data-fivehundred="background-position:50%">
+<!-- <div class="bg" data-zero="background" data-fivehundred="background-position:50%">
 </div>
-
+ -->
 
 
 <br>
