fixed the missing "round
Signed-off-by: CASSY Mickaël <mickael.cassy@gmail.com>

--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
 <!-- Carlo-->
           <div class="col-md-3">
             <div class="contact">
-              <img src="images/contacts/carlo.jpg">
+              <img src="images/contacts/carlo.jpg" class="round">
               <p class="bold">Carlo Anthony Guzman</p>
               <p>Brand Manager for west coast</p>
               <p><a href="mailto:carlo@giowine.com?cc=info@giowine.com.com&subject=More%20information%20about%20Giowine&body=Dear Carlo, %0A%0AI came across your website and I'm interested in more information about Giowine, Inc."><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> carlo@giowine.com</a></p>
