--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
     <div class="content">
       <p>GIOWINE was founded in 2000 by Giovanni Cardullo as an International Consulting Firm that specializes in representing fine Italian products. With offices in X countries, we have on-site representatives with networks and experience in international markets across the American continents.</p>
       <br>
-      <p>We cultivate continuing direct contact between suppliers and clients for stable and dynamic up-to-date connections. We work with genuine enthusiasm to develop brand and product sales internationally at a highly personal and technical level from the producer to the final consumer.</p>
+      <p>We cultivate continuing direct contact between suppliers and clients for stable but also dynamic connections. We work with genuine enthusiasm to develop brand and product sales internationally at a highly personal and technical level from the producer to the final consumer.</p>
 
       <br>
       <p class="bold">We are the only team specialized in Italian wine to cover uninterrupted territory<!-- Button trigger modal -->
@@ -335,6 +335,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
           <img width:"180" src="images/brands/masi.png" alt="Masi">
         </a>
       </div>
+
     </div>
   </div>
 </div><!-- /.companies -->
