--- a/Index.html
+++ b/Index.html
@@ -75,10 +75,10 @@
       </nav>
 
     </header>
-
+<div class="jumbotron">
     <div class="container center">
 
-      <h1 class="bold">Welcome to GioWine, Inc.</h1>
+      <h1 class="bold">Welcome to GioWine</h1>
       <h4 class="bold">The Italian link to the Americas</h4>
 
       </div>
@@ -130,7 +130,7 @@
 
 
       <br>
-      <div class="jumbotron">
+      
         <div class="blurb">
           <div class="row">
             <div class="col-md-6">
@@ -247,7 +247,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
   </div><!--end column-->
 </div><!--end row-->
 </div><!--end .blurb-->
-</div><!-- /.jumbotron -->
+
 
 
 
@@ -339,7 +339,7 @@ marker.bindPopup("Main Office <br> San Diego, California USA").openPopup();
     </div>
   </div>
 </div><!-- /.companies -->
-
+</div><!-- /.jumbotron -->
 
 
 <!-- Footer -->
