--- a/Index.html
+++ b/Index.html
@@ -93,19 +93,19 @@
           <div class="item active">
             <img src="images/test/valley.jpg" alt="Try">
             <div class="carousel-caption">
-              We like wine
+              caption
             </div>
           </div>
           <div class="item">
             <img src="images/test/field.jpg" alt="Try">
             <div class="carousel-caption">
-              here at giowine
+              caption
             </div>
           </div>
           <div class="item">
             <img src="images/test/grape2.jpg" alt="Try">
             <div class="carousel-caption">
-              yes we do
+              
             </div>
           </div>
 
