--- a/wine.html
+++ b/wine.html
@@ -31,11 +31,11 @@
 
 
 
-  <!-- Navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+  <!-- <!-- <!-- Navbar -->
+   <!-- <!--  <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <!-- <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -47,14 +47,14 @@
              <li class="logo"><a class="navbar-brand" href="index.html"><img src="images/vrais_logo.png"></a></li>
              <li id="italianlink">The Italian link to the Americas <span class="glyphicon glyphicon-globe" aria-hidden="true"></li>
           </ul>
-        </div>
-
+        </div> -->
+ --> -->
 
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <!--   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right"> <!--here-->
-           <li class="active"><a href="wine.html"><span class="glyphicon glyphicon-glass" aria-hidden="true"></span> Products</a></li>
+           <!-- <li class="active"><a href="wine.html"><span class="glyphicon glyphicon-glass" aria-hidden="true"></span> Products</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> News & Events</a>
               <ul class="dropdown-menu" role="menu">
@@ -65,16 +65,16 @@
             </li>
             <li><a href="contact.html"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Contact </a></li>
             <li><a href="#"><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Español </a></li>
-          </ul>
+          </ul> -->
 
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+       <!--  </div><!-- /.navbar-collapse -->
+      </div>/.container-fluid
+    </n -->av>
 
- </header>
+<!--  </header> --> -->
 
-<div class="try">
-</div>
+<!-- <div class="try">
+</d -->iv>  -->
 
 
 <!-- /TRYING -->
@@ -148,7 +148,9 @@
     <div id="map2">
       <script>
         var map = L.map('map2', {
-          center: [41.7924601, 12.5736108],
+          center: [41.933138, 12.661501],
+             // french 
+             // center: [46.2157467,2.2096957],
           zoom: 6,
           minZoom: 6,
           maxZoom: 6,
@@ -159,19 +161,31 @@
            zoomControl: false
         });
 
-        var Stamen_Watercolor = L.tileLayer('http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.png', {
-          attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-          subdomains: 'abcd',
-          minZoom: 1,
-          maxZoom: 16
-        }).addTo(map);
+        var Thunderforest_Outdoors = L.tileLayer('http://{s}.tile.thunderforest.com/outdoors/{z}/{x}/{y}.png', {
+  attribution: '&copy; <a href="http://www.opencyclemap.org">OpenCycleMap</a>, &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+
+
+                      minZoom: 1,
+                      maxZoom: 16
+                    }).addTo(map);
 
         var markers_data = {
-          planeta:      {name: 'planeta',     coord:[37.8816289,15.1218875],  modal:'#myModal',   icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          batasiolo:    {name: 'batasiolo',   coord:[44.6376169,7.9421806],   modal:'#myModal2',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          maschio:      {name: 'maschio',     coord:[44.773463,10.513811],    modal:'#myModal3',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          mazzei:       {name: 'mazzei',      coord:[43.435532,11.306296],    modal:'#myModal4',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          farnese:      {name: 'farnese',     coord:[42.352734,14.201073],    modal:'#myModal5',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+          // french
+          // planeta:      {name: 'planeta',     coord:[44.8423155,-0.5813319],  modal:'#myModal',   icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          // batasiolo:    {name: 'batasiolo',   coord:[44.456522,1.4390129],   modal:'#myModal2',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          // maschio:      {name: 'maschio',     coord:[48.976054, 4.382627],    modal:'#myModal3',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          // mazzei:       {name: 'mazzei',      coord:[47.2780655,4.1823779],    modal:'#myModal4',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          // farnese:      {name: 'farnese',     coord:[44.0758227,4.6704557],    modal:'#myModal5',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+           planeta:      {name: 'planeta',     coord:[37.5973,13.027982],  modal:'#myModal',   icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+          batasiolo:    {name: 'batasiolo',   coord:[44.63769,7.94213],   modal:'#myModal2',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+          maschio:      {name: 'maschio',     coord:[45.847865,12.42819],    modal:'#myModal3',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          mazzei:       {name: 'mazzei',      coord:[43.435491,11.306303],    modal:'#myModal4',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+          farnese:      {name: 'farnese',     coord:[42.352734,14.401073],    modal:'#myModal5',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null}
+          ,
           fantinel:     {name: 'fantinel',    coord:[46.106565,12.836795],    modal:'#myModal6',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
           riunite:      {name: 'riunite',     coord:[44.4355049,10.9767866],  modal:'#myModal7',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
           casanova:     {name: 'casanova',    coord:[43.057149,11.5219],      modal:'#myModal8',  icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
@@ -180,11 +194,14 @@
           casale:       {name: 'casale',      coord:[41.880312,12.486956],    modal:'#myModal11', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
           cecchi:       {name: 'cecchi',      coord:[43.863751,10.248668],    modal:'#myModal12', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
           vesevo:       {name: 'vesevo',      coord:[40.861278,14.737792],    modal:'#myModal13', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          roncaia:      {name: 'roncaia',     coord:[46.210658,13.303138],    modal:'#myModal16', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
-          rustichella:  {name: 'rustichella', coord:[42.396833,13.56532],     modal:'#myModal14', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
-          ferrarelle:   {name: 'ferrarelle',  coord:[41.26142,14.1498185],    modal:'#myModal15', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
-          amaretti:     {name: 'amaretti',    coord:[45.6867005,8.9315245],   modal:'#myModal17', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
-          olio:         {name: 'olio',        coord:[37.6042748,12.9660447],  modal:'#myModal18', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null}
+          roncaia:      {name: 'roncaia',     coord:[42.352675, 14.393177],    modal:'#myModal16', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+          duca:      {name: 'duca',     coord:[40.089552,18.29701],    modal:'#myModal16', icon:{type:'glyphicon-glass',   color:'darkpurple'}, marker:null},
+
+          // rustichella:  {name: 'rustichella', coord:[42.396833,13.56532],     modal:'#myModal14', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          // ferrarelle:   {name: 'ferrarelle',  coord:[41.26142,14.1498185],    modal:'#myModal15', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          // amaretti:     {name: 'amaretti',    coord:[45.6867005,8.9315245],   modal:'#myModal17', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null},
+          // olio:         {name: 'olio',        coord:[37.6042748,12.9660447],  modal:'#myModal18', icon:{type:'glyphicon-cutlery', color:'green'},      marker:null}
         };
 
         _.map(markers_data, function(data, key){
@@ -249,6 +266,11 @@
     </div><!-- /MAP-->
 
   </div>
+
+
+
+
+
 
 
   <!--Modals-->
@@ -316,7 +338,7 @@
       </div>
       <div class="modal-body">
         <iframe width="100%" height="375" src="https://www.youtube.com/embed/vd-MMShhxRs" frameborder="0" allowfullscreen></iframe>
-         <p class="caption">Maschio's 2012 commercial for their Pinot Rosa wine, giving tasters a "sparkling moment" | Region: Veneto</p>
+         <p class="caption">Maschios 2012 commercial for their Pinot Rosa wine, giving tasters a "sparkling moment" | Region: Veneto</p>
         <blockquote><p>These are products that satisfy even the most demanding palates at the most particular moments. For over 40 years Maschio has been a synonym of quality and a guarantee of success.  </p></blockquote>
       </div>
       <div class="modal-footer">
